Fix z-index position

--- a/static/style.css
+++ b/static/style.css
@@ -60,6 +60,7 @@ button {
     box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     display: inline-block;
     z-index: 200;
+    position: relative;
 }
 .note {
     padding: 10px;
